Fix/annual plan view missing per monthly (#49711)
* Fix issue with annual plans not showing  text

* Change the 'per month' UI for the mobile view

* UI changes for the mobile view to match control

--- a/client/my-sites/plan-features/style.scss
+++ b/client/my-sites/plan-features/style.scss
@@ -27,7 +27,6 @@ $plan-features-sidebar-width: 272px;
 				}
 				.plan-features--signup .plan-features__pricing {
 					padding: 0 7px;
-
 				}
 			}
 
@@ -35,18 +34,57 @@ $plan-features-sidebar-width: 272px;
 				display: block;
 			}
 
-			.plan-features__pricing .plan-price__currency-symbol {
-				vertical-align: super;
-				font-size: $font-body-extra-small;
-				font-weight: normal;
+			.plan-features__header {
+				display: block;
+				position: relative;
+				text-align: left;
+				box-sizing: border-box;
+				border-top: solid 8px;
+				border-radius: 2px 2px 0 0;
+				padding-bottom: 12px;
+		
+				&.is-blogger-plan {
+					border-color: var( --color-plan-blogger );
+					border-bottom: solid 2px var( --color-neutral-10 );
+				}
+		
+				&.is-personal-plan {
+					border-color: var( --color-plan-personal );
+					border-bottom: solid 2px var( --color-neutral-10 );
+				}
+		
+				&.is-premium-plan {
+					border-color: var( --color-plan-premium );
+					border-bottom: solid 2px var( --color-neutral-10 );
+				}
+		
+				&.is-business-plan {
+					border-color: var( --color-plan-business );
+					border-bottom: solid 2px var( --color-neutral-10 );
+				}
+		
+				&.is-ecommerce-plan {
+					border-color: var( --color-plan-ecommerce );
+					border-bottom: solid 2px var( --color-neutral-10 );
+				}
 			}
 
-			//To be moved to line 904 approximately
-			.plan-price.plan-price {
-				font-weight: 400;
+			 .plan-price {
+				font-weight: 600;
 				margin-right: 10px;
-				font-size: $font-title-medium;
+				font-size: $font-headline-large;
+				text-align: center;
 				font-family: 'Helvetica Neue', helvetica, arial, sans-serif;
+
+				.plan-price__currency-symbol {
+					vertical-align: super;
+					font-size: $font-title-medium;
+					font-weight: 400;
+				}
+				
+				.plan-price__integer {
+					font-weight: 600;
+				}
 			}
 
 			.plan-features__header-title {
@@ -57,14 +95,11 @@ $plan-features-sidebar-width: 272px;
 
 			.plan-features__header-billing-info {
 				margin-bottom: 1.4em;
-				font-size: 0.75rem;
-				font-style: italic;
-				font-weight: 400;
 				color: var( --color-text-subtle );
 				line-height: normal;
+				text-align: center;
 			}
 		}
-
 	}
 }
 
